<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.almondtools</groupId>
	<artifactId>regexbench</artifactId>
	<version>0.2.0-SNAPSHOT</version>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<uberjar.name>benchmarks</uberjar.name>
	</properties>

	<repositories>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.github.almondtools</groupId>
			<artifactId>rexlex</artifactId>
			<version>0.3.2</version>
		</dependency>
		<dependency>
			<groupId>net.amygdalum</groupId>
			<artifactId>stringsearchalgorithms</artifactId>
			<version>0.4.3</version>
		</dependency>
		<dependency>
			<groupId>net.amygdalum</groupId>
			<artifactId>patternsearchalgorithms</artifactId>
			<version>0.1.2</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.jregex</groupId>
			<artifactId>jregex</artifactId>
			<version>1.2_01</version>
		</dependency>
		<dependency>
			<groupId>com.google.re2j</groupId>
			<artifactId>re2j</artifactId>
			<version>1.7</version>
		</dependency>
		<dependency>
			<groupId>dk.brics</groupId>
			<artifactId>automaton</artifactId>
			<version>1.12-4</version>
		</dependency>
		<dependency>
			<groupId>top.yatt.dfargx</groupId>
			<artifactId>dfargx</artifactId>
			<version>0.2.1</version>
		</dependency>
		
		<dependency>
			<groupId>net.amygdalum</groupId>
			<artifactId>compilerutils</artifactId>
            <version>0.2.3</version>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-core</artifactId>
			<version>1.21</version>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-generator-annprocess</artifactId>
			<version>1.21</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
					<useIncrementalCompilation>false</useIncrementalCompilation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
					<excludes>
						<exclude>**/incubation/**/*.java</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.2</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<finalName>${uberjar.name}</finalName>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>org.openjdk.jmh.Main</mainClass>
								</transformer>
							</transformers>
							<filters>
								<filter>
									<!-- Shading signed JARs will fail without this. http://stackoverflow.com/questions/999489/invalid-signature-file-when-attempting-to-run-a-jar -->
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>